--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@cerebras/cerebras_cloud_sdk": "^1.0.0",
+    "axios": "^1.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase": "^11.10.0",
+    "firebase-admin": "^12.7.0",
     "ws": "^8.18.0"
   }
 }
