--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@cerebras/cerebras_cloud_sdk": "^1.0.0",
+    "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "firebase": "^11.10.0",
-    "firebase-admin": "^12.7.0",
+    "firebase-admin": "^13.4.0",
     "ws": "^8.18.0"
   }
 }
