--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@cerebras/cerebras_cloud_sdk": "^1.0.0",
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^13.4.0",
+    "mongoose": "^8.16.3",
     "ws": "^8.18.0"
   }
 }
